--- a/src/Pages/Page.css
+++ b/src/Pages/Page.css
@@ -8,6 +8,7 @@
     display: flex;;
     flex-direction: column;
     align-items: center;
+    overflow: hidden;
 }
 
 h3 {
@@ -27,6 +28,19 @@ hr {
 }
 
 input {
+    color: rgb(144, 120, 118);
+
+    background-color: #ffffff;
+    padding: 7px 10px;
+    border-radius: 5px;
+    border-style: solid;
+    border-color: rgb(102, 40, 0);
+}
+
+input#name-landpage {
+    position: relative;
+    top: 120px;
+
     color: rgb(144, 120, 118);
 
     background-color: #ffffff;
